--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.12",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.51",
     "axios": "^0.19.2",
     "react": "^16.13.1",
@@ -13,6 +14,7 @@
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.0"
   },
+  "proxy": "http://192.168.1.84:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
