--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.8.1",
-    "mongoose": "^5.11.8",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.4.17",
     "socket.io": "^3.0.4"
   }
